--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -21,6 +21,7 @@ Header mobile
     position: absolute;
     border: 1px solid rgba(127, 167, 148, 0.1);
     z-index: 2;
+    border:none;
 }
 
 .mobile_logo {
