--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -114,7 +114,7 @@ Carrusel
 .img_1 {
     width: 100%;
     height: 100%;
-    background-image: url(/images/carousel_img_1.jpg);
+    background-image: url(/images/ViveBio.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -123,7 +123,7 @@ Carrusel
 .img_2 {
     width: 100%;
     height: 100%;
-    background-image: url(/images/carousel_img_2.jpg);
+    background-image: url(/images/ViveBio-3.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
