--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -51,43 +51,42 @@
             </div>
             <h2 class="titulares">Productos Relacionados</h2>
             <section class="row">
-              <% products.forEach(({id,name,price,discount,property,image})=> { %>
-                <article>
-                  <div class="card estilo-c">
-                    <div class="img-container">
-                      <img src="/images/<%= image %> " alt="producto">
-                      <span class="promo">
-                        <%= discount %>% off
-                      </span>
-                    </div>
-                    <div class="info-container">
-                      <div class="Card-info-texto">
-                        <a href="/products/Card/<%= id %> ">
-                          <h2>
-                            <%= name %>
-                          </h2>
-                        </a>
-                        <h4>
-                          <%= category.name %>
-                        </h4>
-                        <span>-<%= property %> -</span>
-                        <h3>$<%= price %> .-</h3>
-                        <span class="rating">⭐⭐⭐⭐</span>
+              <% if (category === +product.id.category) { %>
+                <% products.forEach(({id,name,price,discount,property,image})=> { %>
+                  <article>
+                    <div class="card estilo-c">
+                      <div class="img-container">
+                        <img src="/images/<%= image %> " alt="producto">
+                        <span class="promo">
+                          <%= discount %>% off
+                        </span>
                       </div>
-                      <div class="card-c-iconos">
-                        <div class="iconos-white">
-                          <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
-                          <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
-                          <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                          <a href="#"><i class="fa-solid fa-star"></i></a>
+                      <div class="info-container">
+                        <div class="Card-info-texto">
+                          <a href="/products/Card/<%= id %> ">
+                            <h2>
+                              <%= name %>
+                            </h2>
+                          </a>
+                          <span>-<%= property %> -</span>
+                          <h3>$<%= price %> .-</h3>
+                          <span class="rating">⭐⭐⭐⭐</span>
                         </div>
-                        <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                        <div class="card-c-iconos">
+                          <div class="iconos-white">
+                            <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
+                            <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
+                            <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                            <a href="#"><i class="fa-solid fa-star"></i></a>
+                          </div>
+                          <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                </article>
-                <% }) %>
-            </section>
+                  </article>
+                  <% }) %>
+              </section>
+              <% } %>
             <h2 class="titulares">Nuestra comunidad</h2>
             <section class="comunidad">
               <div class="box-perfiles">
