--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -6,101 +6,127 @@
     <body class="productAll">
         <%- include('../partials/header') %>
             <main>
-             <section class="main">
-                <h2 class="titulares">BioCapilar</h2>
-                <section class="row">
-                        <% bioCapilar.forEach(({id,name,price,discount,property,image}) => { %>
-                            <article>                    
-                            <div class="card estilo-c">
-                                <div class="img-container">
-                                    <img src="/images/<%= image %> " alt="producto">
-                                    <span class="promo"><%= discount %>% off</span>
-                                </div>
-                                <div class="info-container">
-                                    <div class="Card-info-texto">
-                                        <a href="/products/Card/<%= id %> "><h2><%= name %> </h2></a>
-                                        <h4><%= category.name %> </h4>
-                                        <span>-<%= property %> -</span>
-                                        <h3>$<%= price %> .-</h3>
-                                        <span class="rating">⭐⭐⭐⭐</span>
+                <section class="main">
+                    <h2 class="titulares">BioCapilar</h2>
+                    <section class="row">
+                        <% bioCapilar.forEach(({id,name,price,discount,property,image})=> { %>
+                            <article>
+                                <div class="card estilo-c">
+                                    <div class="img-container">
+                                        <img src="/images/<%= image %> " alt="producto">
+                                        <span class="promo">
+                                            <%= discount %>% off
+                                        </span>
                                     </div>
-                                    <div class="card-c-iconos">
-                                        <div class="iconos-white">
-                                            <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
-                                            <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
-                                            <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                            <a href="#"><i class="fa-solid fa-star"></i></a>
+                                    <div class="info-container">
+                                        <div class="Card-info-texto">
+                                            <a href="/products/Card/<%= id %> ">
+                                                <h2>
+                                                    <%= name %>
+                                                </h2>
+                                            </a>
+                                            <h4>
+                                                <%= category.name %>
+                                            </h4>
+                                            <span>-<%= property %> -</span>
+                                            <h3>$<%= price %> .-</h3>
+                                            <span class="rating">⭐⭐⭐⭐</span>
                                         </div>
-                                        <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                                        <div class="card-c-iconos">
+                                            <div class="iconos-white">
+                                                <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
+                                                <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
+                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                                            </div>
+                                            <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </article>
-                        <% }) %>
+                            </article>
+                            <% }) %>
+                    </section>
+                    <h2 class="titulares">BioCorporal</h2>
+                    <section class="row">
+                        <% bioCorporal.forEach(({id,name,price,discount,property,image})=> { %>
+                            <article>
+                                <div class="card estilo-c">
+                                    <div class="img-container">
+                                        <img src="/images/<%= image %> " alt="producto">
+                                        <span class="promo">
+                                            <%= discount %>% off
+                                        </span>
+                                    </div>
+                                    <div class="info-container">
+                                        <div class="Card-info-texto">
+                                            <a href="/products/Card/<%= id %> ">
+                                                <h2>
+                                                    <%= name %>
+                                                </h2>
+                                            </a>
+                                            <h4>
+                                                <%= category.name %>
+                                            </h4>
+                                            <span>-<%= property %> -</span>
+                                            <h3>$<%= price %> .-</h3>
+                                            <span class="rating">⭐⭐⭐⭐</span>
+                                        </div>
+                                        <div class="card-c-iconos">
+                                            <div class="iconos-white">
+                                                <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
+                                                <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
+                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                                            </div>
+                                            <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <% }) %>
+                    </section>
+                    <h2 class="titulares">BioSpa</h2>
+                    <section class="row">
+                        <% bioSpa.forEach(({id,name,price,discount,property,image})=> { %>
+                            <article>
+                                <div class="card estilo-c">
+                                    <div class="img-container">
+                                        <img src="/images/<%= image %> " alt="producto">
+                                        <span class="promo">
+                                            <%= discount %>% off
+                                        </span>
+                                    </div>
+                                    <div class="info-container">
+                                        <div class="Card-info-texto">
+                                            <a href="/products/Card/<%= products.id %> ">
+                                                <h2>
+                                                    <%= name %>
+                                                </h2>
+                                            </a>
+                                            <h4>
+                                                <%= category.name %>
+                                            </h4>
+                                            <span>-<%= property %> -</span>
+                                            <h3>$<%= price %> .-</h3>
+                                            <span class="rating">⭐⭐⭐⭐</span>
+                                        </div>
+                                        <div class="card-c-iconos">
+                                            <div class="iconos-white">
+                                                <a href="/products/Card/<%= products.id %> "><i
+                                                        class="fa-solid fa-eye"></i></a>
+                                                <a href="/products/Edit/<%= products.id %> "><i
+                                                        class="fa-solid fa-pen"></i></a>
+                                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                                            </div>
+                                            <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <% }) %>
+                    </section>
                 </section>
-                <h2 class="titulares">BioCorporal</h2>
-                <section class="row">
-                <% bioCorporal.forEach(({id,name,price,discount,property,image}) => { %>
-                    <article>                    
-                    <div class="card estilo-c">
-                        <div class="img-container">
-                            <img src="/images/<%= image %> " alt="producto">
-                            <span class="promo"><%= discount %>% off</span>
-                        </div>
-                        <div class="info-container">
-                            <div class="Card-info-texto">
-                                <a href="/products/Card/<%= id %> "><h2><%= name %> </h2></a>
-                                <h4><%= category.name %> </h4>
-                                <span>-<%= property %> -</span>
-                                <h3>$<%= price %> .-</h3>
-                                <span class="rating">⭐⭐⭐⭐</span>
-                            </div>
-                            <div class="card-c-iconos">
-                                <div class="iconos-white">
-                                    <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
-                                    <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
-                                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                    <a href="#"><i class="fa-solid fa-star"></i></a>
-                                </div>
-                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-                <% }) %>
-        </section>
-                <h2 class="titulares">BioSpa</h2>  
-                <section class="row">                
-                <% bioSpa.forEach(({id,name,price,discount,property,image}) => { %>
-                    <article>                    
-                    <div class="card estilo-c">
-                        <div class="img-container">
-                            <img src="/images/<%= image %> " alt="producto">
-                            <span class="promo"><%= discount %>% off</span>
-                        </div>
-                        <div class="info-container">
-                            <div class="Card-info-texto">
-                                <a href="/products/Card/<%= products.id %> "><h2><%= name %> </h2></a>
-                                <h4><%= category.name %> </h4>
-                                <span>-<%= property %> -</span>
-                                <h3>$<%= price %> .-</h3>
-                                <span class="rating">⭐⭐⭐⭐</span>
-                            </div>
-                            <div class="card-c-iconos">
-                                <div class="iconos-white">
-                                    <a href="/products/Card/<%= products.id %> "><i class="fa-solid fa-eye"></i></a>
-                                    <a href="/products/Edit/<%= products.id %> "><i class="fa-solid fa-pen"></i></a>
-                                    <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                    <a href="#"><i class="fa-solid fa-star"></i></a>
-                                </div>
-                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-                <% }) %>
-        </section>
-    </section>
                 <div class="banner">
                     <img src="/images/Banner03.png" alt="">
                 </div>
