--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -13,14 +13,14 @@
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
-                                        <img src="/images/<%= image %> " alt="producto">
+                                        <img src="/images/<%= image %>" alt="producto">
                                         <span class="promo">
                                             <%= discount %>% off
                                         </span>
                                     </div>
                                     <div class="info-container">
                                         <div class="Card-info-texto">
-                                            <a href="/products/Card/<%= id %> ">
+                                            <a href="/products/Card/<%= id %>">
                                                 <h2>
                                                     <%= name %>
                                                 </h2>
@@ -34,8 +34,8 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
-                                                <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
+                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye"></i></a>
+                                                <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen"></i></a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
@@ -52,14 +52,14 @@
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
-                                        <img src="/images/<%= image %> " alt="producto">
+                                        <img src="/images/<%= image %>" alt="producto">
                                         <span class="promo">
                                             <%= discount %>% off
                                         </span>
                                     </div>
                                     <div class="info-container">
                                         <div class="Card-info-texto">
-                                            <a href="/products/Card/<%= id %> ">
+                                            <a href="/products/Card/<%= id %>">
                                                 <h2>
                                                     <%= name %>
                                                 </h2>
@@ -73,8 +73,8 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= id %> "><i class="fa-solid fa-eye"></i></a>
-                                                <a href="/products/Edit/<%= id %> "><i class="fa-solid fa-pen"></i></a>
+                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye"></i></a>
+                                                <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen"></i></a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
@@ -91,14 +91,14 @@
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
-                                        <img src="/images/<%= image %> " alt="producto">
+                                        <img src="/images/<%= image %>" alt="producto">
                                         <span class="promo">
                                             <%= discount %>% off
                                         </span>
                                     </div>
                                     <div class="info-container">
                                         <div class="Card-info-texto">
-                                            <a href="/products/Card/<%= products.id %> ">
+                                            <a href="/products/Card/<%= id %>">
                                                 <h2>
                                                     <%= name %>
                                                 </h2>
@@ -112,9 +112,9 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= products.id %> "><i
+                                                <a href="/products/Card/<%= id %>"><i
                                                         class="fa-solid fa-eye"></i></a>
-                                                <a href="/products/Edit/<%= products.id %> "><i
+                                                <a href="/products/Edit/<%= id %>"><i
                                                         class="fa-solid fa-pen"></i></a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
