--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="info-container">
                                         <div class="Card-info-texto">
-                                            <a href="/products/Card/<%= products.id %> ">
+                                            <a href="/products/Card/<%= id %> ">
                                                 <h2>
                                                     <%= name %>
                                                 </h2>
@@ -112,9 +112,9 @@
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
-                                                <a href="/products/Card/<%= products.id %> "><i
+                                                <a href="/products/Card/<%= id %> "><i
                                                         class="fa-solid fa-eye"></i></a>
-                                                <a href="/products/Edit/<%= products.id %> "><i
+                                                <a href="/products/Edit/<%= id %> "><i
                                                         class="fa-solid fa-pen"></i></a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
