--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -1,4 +1,5 @@
 <header class="header">
+    <section class="background">
     <div class="mobile_header">
         <div class="mobile_logo">
             <a href="/"><img src="/images/logo.png" alt="logo"></a>
@@ -45,4 +46,5 @@
             <a href="#"><img src="/images/corazon.png" alt=""></a>
         </div>
     </nav>
+</section>
 </header>
