--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -50,8 +50,7 @@
             </div>
             <h2 class="titulares">Productos Relacionados</h2>
             <section class="row">
-              <% if (+products.category == +product.id.category) { %>
-                <% products.forEach(({id,name,price,discount,property,image})=> { %>
+                <% categories.forEach(({id,name,price,discount,property,image})=> { %>
                   <article>
                     <div class="card estilo-c">
                       <div class="img-container">
@@ -84,7 +83,6 @@
                     </div>
                   </article>
                   <% }) %>
-              <% } %>
               </section>
             <h2 class="titulares">Nuestra comunidad</h2>
             <section class="comunidad">
