--- a/site_ViveBio/src/views/index.jade
+++ b/site_ViveBio/src/views/index.jade
@@ -169,6 +169,7 @@
             </main>
             <%- include('./partials/footer') %>
                 <script type="text/javascript" src="/javascript/carrusel.js"></script>
+                <script src="/javascript/menuMobile.js"></script>
     </body>
 
 </html>
