--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -6,6 +6,7 @@
     <body class="productAll">
         <%- include('../partials/header') %>
             <main>
+
                 <h2 class="titulares">Productos Recomendados</h2>
                 <section class="row">
                     <div class="card estilo-c">
@@ -600,6 +601,7 @@
             </main>
 
             <%- include('../partials/footer') %>
+                <script src="/javascript/menuMobile.js"></script>
     </body>
 
 </html>
