--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -1,48 +1,56 @@
 <header class="header">
-    <div class="mobile_header">
-        <div class="mobile_logo">
-            <a href="/"><img src="/images/logo.png" alt="logo"></a>
+    <div class="header_mobile-container">
+        <div class="mobile_header">
+            <div class="mobile_logo">
+                <a href="/"><img src="/images/logo.png" alt="logo"></a>
+            </div>
+            <div class="nav_mobile_menu">
+                <span id="btnMenu"><i class="fas fa-bars"></i></span>
+            </div>
         </div>
-        <div class="nav_mobile_menu">
-            <i class="fas fa-bars"></i>
+        <div class="header__container">
+            <div class="header__logo">
+                <a href="/"><img src="/images/logo.png" alt="logo"></a>
+            </div>
+            <div class="header__busqueda">
+                <input type="text" class="barra" style="padding-left:5px;">
+                <button type="submit" class="barra__lupa"><i class="fas fa-search"></i></button>
+            </div>
+            <div class="header__user">
+                <a href="/users/login">
+                    <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
+                    <p>Usuario</p>
+                    <a class="user_control" href="/products/add">Agregar Producto</a>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="header__container">
-        <div class="header__logo">
-            <a href="/"><img src="/images/logo.png" alt="logo"></a>
-        </div> 
-        <div class="header__busqueda">
-            <input type="text" class="barra" style="padding-left:5px;">
-            <button type="submit" class="barra__lupa"><i class="fas fa-search"></i></button>
-        </div>
-        <div class="header__user">
-            <a href="/users/login">
-                <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
-                <p>Usuario</p>
-                <a class="user_control" href="/products/add">Agregar Producto</a>
-            </a>
-        </div>
-    </div>
-    <!-- <div class="header__burger">
-        
-    </div> -->
-    <nav class="header__nav">
-        <div class="header__localizacion">
-            <a href="">Estas en "lugar"</a>
-        </div>
-        <div class="header__opciones">
-            <ul>
+        <nav class="header__nav">
+            <div class="header__localizacion">
+                <a href="">Estas en "lugar"</a>
+            </div>
+            <div class="header__opciones">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/products/all">Productos</a></li>
+                    <li><a href="">Quienes somos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="header__iconos">
+                <a href="#"><img src="/images/configuracion.png" alt=""></a>
+                <a href="#"><img src="/images/campana.png" alt=""></a>
+                <a href="/carrito"><img src="/images/carrito.png" alt=""></a>
+                <a href="#"><img src="/images/corazon.png" alt=""></a>
+            </div>
+        </nav>
+        <div class="options_mobile" id="menu">
+            <ul class="menu" >
                 <li><a href="/">Home</a></li>
                 <li><a href="/products/all">Productos</a></li>
                 <li><a href="">Quienes somos</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
         </div>
-        <div class="header__iconos">
-            <a href="#"><img src="/images/configuracion.png" alt=""></a>
-            <a href="#"><img src="/images/campana.png" alt=""></a>
-            <a href="/carrito"><img src="/images/carrito.png" alt=""></a>
-            <a href="#"><img src="/images/corazon.png" alt=""></a>
-        </div>
-    </nav>
+        <div class="shadow_mobile" id="shadow"></div>
+    </div>
 </header>
