--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                 </section>
-                <h2 class="titulares">BioCapilar</h2>
+                <h2 class="titulares" id="BioCapilar">BioCapilar</h2>
                 <section class="row">
                     <div class="card estilo-c">
                         <div class="img-container">
@@ -300,7 +300,7 @@
                         </div>
                     </div>
                 </section>
-                <h2 class="titulares">BioCorporal</h2>
+                <h2 class="titulares" id="BioCorporal">BioCorporal</h2>
                 <section class="row">
                     <div class="card estilo-c">
                         <div class="img-container">
@@ -447,7 +447,7 @@
                         </div>
                     </div>
                 </section>
-                <h2 class="titulares">BioSpa</h2>
+                <h2 class="titulares" id="BioSpa">BioSpa</h2>
                 <section class="row">
                     <div class="card estilo-c">
                         <div class="img-container">
