--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -44,8 +44,8 @@
                 <div class="producto-iconos">
                   <a href="#"><i class="fa-solid fa-star"></i></a>
                   <a href=""><i class="fa-solid fa-share-nodes"></i></a>
-                  <a href="/products/Edit/1"><i class="fa-solid fa-pen"></i></a><!--pongo 1 para producto 1, pero despues cambiar-->
-                  <form action="/Products/remove/<%= products.id %>?_method=DELETE" method="POST"> 
+                  <a href="/products/Edit/<%= product.id %>"><i class="fa-solid fa-pen"></i></a><!--pongo 1 para producto 1, pero despues cambiar-->
+                  <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST"> 
                     <button type="submit"><i class="fa-solid fa-trash-can"></i></button>
                   </form>
                   <a href="/productCarrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
