--- a/site_ViveBio/src/views/products/addProducts.ejs
+++ b/site_ViveBio/src/views/products/addProducts.ejs
@@ -51,7 +51,7 @@
                                 </div>
                                 <div class="add_form-box-description">
                                     <label for="desciption">Descripción</label>
-                                    <textarea class="add_input" type="text" id="desciption" name="desciption" rows="3" cols="35"
+                                    <textarea class="add_input" type="text" id="desciption" name="description" rows="3" cols="35"
                                         style="resize: none; padding:5px;"></textarea>
                                 </div>
                             </div>
