--- a/site_ViveBio/src/views/products/editProducts.ejs
+++ b/site_ViveBio/src/views/products/editProducts.ejs
@@ -8,7 +8,7 @@
                 <main>
                     <section class="add_container">
                         <h3>Editar Producto</h3>
-                        <form action="/Products/update/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                        <form action="/products/update/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                             <article class="camps_container">
                                 <div class="sub_container">
                                     <div class="add_form-box">
