--- a/site_ViveBio/src/views/products/productSearch.ejs
+++ b/site_ViveBio/src/views/products/productSearch.ejs
@@ -7,7 +7,7 @@
         <%- include('../partials/header') %>
             <main>
                 <div class="subtitulo__home">
-                    <h1>Busqueda</h1>
+                    <h1>Resultado de la búsqueda</h1>
                 </div>
                 <section class="sect1">
                     <% result.forEach(product => { %>
