--- a/site_ViveBio/src/views/products/productSearch.ejs
+++ b/site_ViveBio/src/views/products/productSearch.ejs
@@ -7,9 +7,10 @@
         <%- include('../partials/header') %>
             <main>
                 <div class="subtitulo__home">
-                    <h1>Resultado de la búsqueda</h1>
+                    <h1>Resultados para tu búsqueda</h1>
                 </div>
                 <section class="sect1">
+                    <% if (result.length > 0) { %>
                     <% result.forEach(product => { %>
                             <article class="art__home">
                                 <div class="nombreart__home">
@@ -31,6 +32,11 @@
                                 </div>
                             </article>
                     <% }) %>
+                    <% }else{ %>
+                        <div class="alert alert-warning mt-1">
+                            No se encontraron coincidencias 🤔
+                        </div>
+                    <% } %>
             </main>
             <%- include('../partials/footer') %>
     </body>
