--- a/site_ViveBio/src/views/products/productSearch.ejs
+++ b/site_ViveBio/src/views/products/productSearch.ejs
@@ -34,7 +34,7 @@
                     <% }) %>
                     <% }else{ %>
                         <div class="alert alert-warning mt-1">
-                            No se encontraron coincidencias 🧐
+                          <h2>  No se encontraron coincidencias 🧐 </h2>
                         </div>
                     <% } %>
             </main>
