--- a/site_ViveBio/src/views/error.ejs
+++ b/site_ViveBio/src/views/error.ejs
@@ -1,3 +1,52 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <title> Error </title>
+</head>
+
+<body class="error">
+    <main>
+        <section class="page_404">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 ">
+                        <div class="col-sm-10 col-sm-offset-1  text-center">
+                            <div class="four_zero_four_bg">
+
+                                <h1 class="text-center ">404</h1>
+
+                            </div>
+                            <div class="contant_box_404">
+                                <h3>
+                                    Look like you're lost
+                                </h3>
+
+                                <p>the page you are looking for not avaible!</p>
+
+                                <a href="/" class="link_404">Go to Home</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+</body>
+
+<h1>
+    <%= message %>
+</h1>
+<h2>
+    <%= error.status %>
+</h2>
 <pre><%= error.stack %></pre>
+</html>
+
