--- a/site_ViveBio/public/css/error.css
+++ b/site_ViveBio/public/css/error.css
@@ -6,43 +6,41 @@
 .error .container{
     width: 100%;
 }
-.page_404{ padding:40px 0; background:#fff; font-family: 'Arvo', serif;
+.error .page_404{ padding:40px 0; background:#fff; font-family: 'Arvo', serif;
 }
 
-.page_404  img{ width:100%;}
+.error .page_404  img{ width:100%;}
 
-.four_zero_four_bg{
- 
+.error.four_zero_four_bg{
  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
     height: 400px;
     background-position: center center;
     background-size: cover;
-
  }
  
  
- .four_zero_four_bg{
- font-size:80px;
+ .error .four_zero_four_bg{
+    font-size:80px;
  }
 
 
-.four_zero_four_bg h3,h1,p{
+.error .four_zero_four_bg h3,h1,p{
     color: var(--verdeFuerte);
 }
 
-.contant_box_404 p,h3{
+.error .contant_box_404 p,h3{
     color: var(--verdeFuerte);
 }
 
-.link_404{			 
-	color: white;
+.error .link_404{			 
+    color: white;
     padding: 10px 20px;
     background: #39ac31;
     margin: 20px 0;
     display: inline-block;
 }
 
-.contant_box_404{
+.error .contant_box_404{
     margin-top:-50px;
     display: flex;
     flex-direction: column;
@@ -51,7 +49,7 @@
 }
 
 @media(min-width: 768px){
-    .contant_box_404{
+    .error .contant_box_404{
         margin-top: 0px;
     }
 }
